# factor

./: .build.yml  .gitignore  README.md  architecture.md  cljs_quickstart.md  package-lock.json  package.json  pyproject.toml  shadow-cljs.edn
.clj-kondo/: config.edn
factor/: __init__.py  factory.py  item_editor.py  menu.py  state.py
factorycalculator/: __init__.py  state.py
public/: index.html
src/main/factor/: app.cljs  cmds.cljs  components.clj  components.cljs  db.cljs  events.cljs  factory.cljs  filter.cljs  fx.cljs  interceptors.cljs  item.cljs  localstorage.cljs  machine.cljs  navs.cljs  pgraph.cljs  qmap.cljs  recipe.cljs  schema.cljs  styles.cljs  subs.cljs  util.cljs  view.cljs  widgets.cljs  world.cljs
src/main/factor/components/: cmd.cljs  factory.cljs  grid.cljs  inputs.cljs  item.cljs  machine.cljs  macros.clj  macros.cljs  menus.cljs  recipe.cljs  widgets.cljs  wrappers.cljs
src/main/factor/factory/: components.cljs  events.cljs  subs.cljs  view.cljs
src/main/factor/item/: components.cljs  events.cljs  subs.cljs  view.cljs
src/main/factor/machine/: components.cljs  events.cljs  subs.cljs  view.cljs
src/main/factor/presets/: factorio.cljs
src/main/factor/recipe/: components.cljs  events.cljs  subs.cljs  view.cljs
src/main/factor/view/: app.cljs  factory.cljs  help.cljs  home.cljs  item.cljs  machine.cljs  notfound.cljs  recipe.cljs  settings.cljs
src/main/factor/world/: events.cljs  subs.cljs  view.cljs
src/test/factor/: cmds_test.cljs  pgraph_test.cljs  schema_test.cljs  util_test.cljs  world_test.cljs
