[tool.poetry]
name = "factor"
version = "0.1.0"
description = ""
authors = ["Luke Turner <github@luketurner.org>"]
license = "MIT"

[tool.poetry.scripts]
factor = "factor:cli"

[tool.poetry.dependencies]
python = "^3.8"
dearpygui = "^0.6.166"
typer = "^0.3.2"
toolz = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
